[tool.poetry]
name = "osqf"
version = "0.1.0"
description = "Jupyter notebooks for OSQF demo"
authors = ["Killian Tattan <killiantattan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
pandas = "^2.2.3"
numpy = "^2.1.3"
jupyter = "^1.0.0"
scipy = "^1.13.0"
plotly = "^5.20.0"
notebook = "6.1.5"
statsmodels = "^0.14.4"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
